bk_ida/gccida/c3/finish_spills
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_spills/src/reload1.c:4115:6: error: expected expression
v1 = ::used_spill_regs; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_spills/src/reload1.c:4163:15: error: use of undeclared identifier 'off_723588'
fancy_abort( &off_723588[4], 3642, "finish_spills"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_spills/src/reload1.c:4345:7: error: expected expression
v42 = ::used_spill_regs & ~v47[0]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_spills/src/reload1.c:4348:15: error: use of undeclared identifier 'off_723588'
fancy_abort( &off_723588[4], 3721, "finish_spills"); 
              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_spills/src/obj/reload1.o] Error 1
